--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "cheerio": "^1.0.0-rc.3",
+    "dayjs": "^1.10.5",
     "inline-css": "^2.4.1",
     "koa": "^2.7.0",
     "koa-art-template": "^1.1.1",
