--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "inline-css": "^2.4.1",
     "koa": "^2.7.0",
     "koa-art-template": "^1.1.1",
+    "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.0",
     "superagent": "^5.0.2"
