--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,10 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ gh-actions-schedule ]
-  pull_request:
-    branches: [ gh-actions-schedule ]
+  # push:
+  #   branches: [ gh-actions-schedule ]
+  # pull_request:
+  #   branches: [ gh-actions-schedule ]
   schedule:
     # 定时任务，在每天的5点20推送天气信息到邮箱（UTC时间）
     - cron: '20 21 * * *'
